--- a/src/template.html
+++ b/src/template.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Todo</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <p>ToDo</p>
+        </div>
+        <button>New Project</button>
+    </header>
 </body>
 </html>
