--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,7 @@
 <body>
     <header>
         <div class="logo">
+            <img src="./images/todo-icon.svg">
             <p>ToDo</p>
         </div>
         <button>New Project</button>
