Create todo page sidebar and create sidebar styling

--- a/src/template.html
+++ b/src/template.html
@@ -13,5 +13,9 @@
         </div>
         <button>New Project</button>
     </header>
+
+    <div class="sidebar">
+        <h1>Projects</h1>
+    </div>
 </body>
 </html>
