--- a/src/template.html
+++ b/src/template.html
@@ -11,7 +11,7 @@
             <img src="./images/todo-icon.svg">
             <p>ToDo</p>
         </div>
-        <button>New Project</button>
+        <button id="new-project-button">New Project</button>
     </header>
 
     <div class="sidebar">
